[workspace]
members = [
    "http_capsule",
    "moq_relay",
    "moq_utils",
    "quiche_moq_macros",
    "quiche_h3_utils",
    "quiche_moq",
    "quiche_moq/examples/*",
    "quiche_moq_web",
    "quiche_moq_webtransport_helper",
    "quiche_moq_wire",
    "quiche_utils",
    "quiche_webtransport",
    "short_buf",
    "quiche_endpoint_utils",
]
resolver = "2"

[workspace.dependencies]
boring = "4.19.0"
bytes = "1.10.1"
chrono = "0.4.42"
clap = { version = "4.5.46", features = ["derive", "env"] }
env_logger = "0.11.8"
log = "0.4.28"
mio = "1.0"
mp4 = "0.14.0"
octets = "0.3"
quiche = { version = "0.26"}
qlog = { version = "0.16" }
quiche_h3_utils = { path="quiche_h3_utils" }
quiche_mio_runner = { git = "https://github.com/birneee/quiche_mio_runner" }
quiche_moq = { path="quiche_moq" }
quiche_moq_wire = { path="quiche_moq_wire" }
quiche_utils = { path="quiche_utils" }
quiche_webtransport = { path="quiche_webtransport" }
rcgen = "0.13.2"
short_buf = { path = "short_buf" }
smallvec = "2.0.0-alpha.11"
url = "2.5.7"
serde_json = "1"
quiche_moq_webtransport_helper = { path="quiche_moq_webtransport_helper" }
quiche_moq_macros = { path="quiche_moq_macros" }
http_capsule = { path = "http_capsule" }
quiche_endpoint_utils = { path="quiche_endpoint_utils" }

[patch.crates-io]
quiche = { git="https://github.com/birneee/quiche", branch = "webtransport_streams_and_qlog_reference_time" }
octets = { git="https://github.com/birneee/quiche", branch = "webtransport_streams_and_qlog_reference_time" }
qlog = { git="https://github.com/birneee/quiche", branch = "webtransport_streams_and_qlog_reference_time" }
