[package]
name = "moq-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
quiche_moq = { workspace = true }
quiche_mio_runner = { workspace = true }
quiche_moq_webtransport_helper = { workspace = true }
env_logger = "0.11.8"
log = "0.4.29"
boring = { workspace = true }
quiche_utils = { workspace = true }
quiche_webtransport = { workspace = true }
