[package]
name = "moq-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
quiche_mio_runner = { workspace = true }
quiche_webtransport = { workspace=true }
quiche_moq = { workspace=true }
env_logger = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
