[package]
name = "moq-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
quiche_mio_runner = { workspace = true }
quiche_webtransport = { workspace=true }
quiche_moq = { workspace=true }
env_logger = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
quiche_moq_webtransport_helper = { workspace = true }
quiche_h3_utils = { workspace = true }
mio = { workspace = true, features = ["os-ext"] }
libc = "0.2"
partial-borrow = "1.0.1"
