[package]
name = "quiche_moq_webtransport_helper"
version = "0.1.0"
edition = "2024"

[dependencies]
log = {  workspace = true }
url = { workspace = true }
quiche = { workspace = true }
quiche_moq = { workspace = true }
quiche_webtransport = { workspace = true }
quiche_h3_utils = { workspace = true }
