[package]
name = "time-server"
version = "0.1.0"
edition = "2024"

[dependencies]
quiche_mio_runner = {workspace = true}
quiche_moq = {workspace = true}
env_logger = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
quiche_utils = { workspace = true }
boring = { workspace = true }
quiche_moq_webtransport_helper = { workspace = true }
